--- a/app/components/layout/Site.css
+++ b/app/components/layout/Site.css
@@ -1,4 +1,33 @@
-#container {
-  background: rgba(255, 0, 0, .50);
-  border: 1px solid black;
+@import "../../styles/media-queries.css";
+@import "../../styles/colors.css";
+
+html, body {
+  font-size: 16px;
+}
+
+@media (--small-viewport) {
+  html, body {
+    font-size: 14px;
+  }
+}
+
+/* set up default color for links */
+a {
+  color: var(--blackish);
+  transition: all 300ms;
+}
+
+button {
+  transition: all 300ms;
+}
+
+.site {
+  lost-flex-container: row;
+  color: var(--blackish);
+}
+
+button {
+  padding: 0;
+  border: 0;
+  background: none;
 }
